--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "western-congress",
+   "id": "promotional-hudson",
    "metadata": {
     "hidden": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regional-baltimore",
+   "id": "complicated-floor",
    "metadata": {
     "hidden": true
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cardiovascular-monroe",
+   "id": "pending-certificate",
    "metadata": {
     "hidden": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "breathing-ordinary",
+   "id": "signed-residence",
    "metadata": {
     "heading_collapsed": true
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naked-facing",
+   "id": "sacred-shell",
    "metadata": {
     "hidden": true
    },
@@ -83,7 +83,9 @@
   {
    "cell_type": "markdown",
    "id": "aggressive-discrimination",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# <span style='color:Yellow'><center> <em>Heading More details</em></center> </span>\n",
     "<h2> <span style='color:Yellow'><center> <em>description</em></center> </span></h2>\n",
@@ -93,7 +95,9 @@
   {
    "cell_type": "markdown",
    "id": "accessible-victoria",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "    <span style='color:Yellow'><center> <em>Section 14 - 2</em></center> </span>\n",
     "    <h2> <span style='color:Yellow'><center> <em>Shutil and OS Modules</em></center> </span></h2>\n",
