--- a/16-Emailing-with-Python/Notes/00-Overview-of-Sending-Emails.ipynb
+++ b/16-Emailing-with-Python/Notes/00-Overview-of-Sending-Emails.ipynb
@@ -13,7 +13,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "### Overview of Sending Emails"
+    "#### Overview of Sending Emails"
    ]
   },
   {
@@ -112,7 +112,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "### Greets the server and establishes the connection. "
+    "#### Greets the server and establishes the connection. "
    ]
   },
   {
@@ -193,7 +193,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "### For hidden passwords"
+    "#### For hidden passwords"
    ]
   },
   {
@@ -287,7 +287,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "### Generating app password"
+    "#### Generating app password"
    ]
   },
   {
@@ -328,7 +328,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "### Sending Email using sendmail method"
+    "#### Sending Email using sendmail method"
    ]
   },
   {
