--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "promotional-hudson",
+   "id": "valid-prescription",
    "metadata": {
     "hidden": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complicated-floor",
+   "id": "ready-tension",
    "metadata": {
     "hidden": true
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pending-certificate",
+   "id": "passive-attention",
    "metadata": {
     "hidden": true
    },
@@ -62,23 +62,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "signed-residence",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "id": "dental-affairs",
+   "metadata": {},
    "source": [
     "# <span style='color:DarkRed'> Simple Color heading DarkRed. </span>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "sacred-shell",
-   "metadata": {
-    "hidden": true
-   },
+   "id": "promotional-primary",
+   "metadata": {},
    "source": [
-    "    # <span style='color:DarkRed'> Simple Color heading DarkRed. </span>"
+    "# <span style='color:DarkRed'> Simple Color heading DarkRed. </span>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "consecutive-mexico",
+   "metadata": {},
+   "source": [
+    "    # <span style='color:Red'> Simple Color heading Red. </span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "patent-inspiration",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
