--- a/16-Emailing-with-Python/Notes/00-Overview-of-Sending-Emails.ipynb
+++ b/16-Emailing-with-Python/Notes/00-Overview-of-Sending-Emails.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style='color:Brown'> Overview of Sending Emails. </span>"
+    "# <span style='color:darkblue'> Overview of Sending Emails. </span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Overview of Sending Emails"
+    "### <span style='color:darkblue'> Overview of Sending Emails. </span>"
    ]
   },
   {
