--- a/Templates.ipynb
+++ b/Templates.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "valid-prescription",
+   "id": "trying-savings",
    "metadata": {
     "hidden": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ready-tension",
+   "id": "fiscal-exhibit",
    "metadata": {
     "hidden": true
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "passive-attention",
+   "id": "deadly-numbers",
    "metadata": {
     "hidden": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dental-affairs",
+   "id": "serial-constitution",
    "metadata": {},
    "source": [
     "# <span style='color:DarkRed'> Simple Color heading DarkRed. </span>"
@@ -70,25 +70,67 @@
   },
   {
    "cell_type": "markdown",
-   "id": "promotional-primary",
+   "id": "extra-legislation",
    "metadata": {},
    "source": [
-    "# <span style='color:DarkRed'> Simple Color heading DarkRed. </span>"
+    "# <span style='color:Red'> Simple Color heading Red. </span>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "consecutive-mexico",
+   "id": "quarterly-vision",
    "metadata": {},
    "source": [
     "    # <span style='color:Red'> Simple Color heading Red. </span>"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "thrown-zoning",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# <span style='color:DarkBlue'> Simple Color heading DarkBlue. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "realistic-nirvana",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "    # <span style='color:DarkBlue'> Simple Color heading DarkBlue. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "disturbed-diamond",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# <span style='color:Blue'> Simple Color heading Blue. </span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ultimate-perth",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "    # <span style='color:Blue'> Simple Color heading Blue. </span>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "patent-inspiration",
-   "metadata": {},
+   "id": "assisted-promise",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
