--- a/16-Emailing-with-Python/Notes/00-Overview-of-Sending-Emails.ipynb
+++ b/16-Emailing-with-Python/Notes/00-Overview-of-Sending-Emails.ipynb
@@ -9,14 +9,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "### <span style='color:darkblue'> Overview of Sending Emails. </span>"
+    "#### <span style='color:kblue'> Overview of Sending Emails. </span>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The smtplib library allows you to manually go through the steps of creating and sending an email in Python:"
    ]
@@ -25,7 +29,8 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -34,7 +39,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Create an SMTP object for a server. Here are the main Server Domain Name for the top email services. If you don't see your email server here, you may need to do a quick Google Search to see if there SMTP server domain name is available:\n",
     "\n",
@@ -80,7 +87,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Next is to create an STMP object that can make the method calls to log you in to your email in order to send messages. Notice how also specify a port number. If the number 587 does not work on your computer, try using 465 instead. Keep in mind, a firewall or antivirus may prevent Python from opening up this port, so you may need to disable it on your computer."
    ]
@@ -89,7 +98,8 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -102,7 +112,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "## Greets the server and establishes the connection. "
+    "#### <span style='color:kblue'> Greets the server and establishes the connection.  </span>"
    ]
   },
   {
