--- a/16-Emailing-with-Python/Notes/00-Overview-of-Sending-Emails.ipynb
+++ b/16-Emailing-with-Python/Notes/00-Overview-of-Sending-Emails.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style='color:darkblue'> Overview of Sending Emails. </span>"
+    "# <span style='color:brown'> Overview of Sending Emails. </span>"
    ]
   },
   {
@@ -13,7 +13,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "#### <span style='color:kblue'> Overview of Sending Emails. </span>"
+    "### <span style='color:blue'> Overview of Sending Emails. </span>"
    ]
   },
   {
@@ -112,7 +112,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "#### <span style='color:kblue'> Greets the server and establishes the connection.  </span>"
+    "### <span style='color:kblue'> Greets the server and establishes the connection.  </span>"
    ]
   },
   {
@@ -189,19 +189,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "## For hidden passwords"
+    "### For hidden passwords"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -212,9 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -231,9 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -254,9 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -283,25 +274,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "## Generating app password"
+    "### Generating app password"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "____\n",
     "**Note for Gmail Users, you need to generate an app password instead of your normal email password. This also requires enabling 2-step authentication. Follow the instructions here to set-up 2-Step Factor Authentication as well as App Password Generation:https://support.google.com/accounts/answer/185833?hl=en/. Set-up 2 Factor Authentication, then create the App Password, choose Mail as the App and give it any name you want. This will output a 16 letter password for you. Pass in this password as your login password for the smtp.**\n",
@@ -312,8 +297,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -324,32 +308,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "## Sending Email using sendmail method"
+    "### <span style='color:blue'> Sending Email using sendmail method. </span>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Now we can send an email using the .sendmail() method."
    ]
@@ -357,9 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -393,18 +367,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "If you get back an empty dictionary, then the sending was successful."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "You can then close your session with the .quit() method."
    ]
@@ -412,9 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -433,9 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "Now that we know how to send emails, its time to learn how to look through emails you've already recieved."
    ]
@@ -443,17 +409,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# <span style='color:Brown'> Excercise. </span>"
    ]
@@ -461,9 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import smtplib"
@@ -472,9 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "smtp_object = smtplib.SMTP('smtp.gmail.com',587)"
@@ -483,9 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -506,9 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -528,9 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import getpass"
@@ -539,9 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -558,9 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# password"
@@ -569,18 +517,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     " "
@@ -589,18 +533,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
